tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari
fn main() -> i64 {
  var value: i64 = 1;
  value = true;
  return value;
}
